@@ -4,11 +4,25 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public enum Role {
-    ADMIN(Set.of(Permission.ADMIN_READ, Permission.ADMIN_CREATE, Permission.ADMIN_UPDATE, Permission.ADMIN_DELETE)),
-    MANAGER(Set.of(Permission.MANAGER_UPDATE)),
-    USER(Set.of(Permission.USER_READ, Permission.USER_UPDATE, Permission.USER_CREATE, Permission.USER_DELETE));
+    ADMIN(Set.of(
+            Permission.ADMIN_READ,
+            Permission.ADMIN_CREATE,
+            Permission.ADMIN_UPDATE,
+            Permission.ADMIN_DELETE
+    )),
+    MANAGER(Set.of(
+            Permission.MANAGER_UPDATE
+    )),
+    USER(Set.of(
+            Permission.USER_READ,
+            Permission.USER_CREATE,
+            Permission.USER_UPDATE,
+            Permission.USER_DELETE
+    ));
+
     private final Set<Permission> permissions;
 
     Role(Set<Permission> permissions) {
@@ -20,8 +34,11 @@ public enum Role {
     }
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        return permissions.stream()
-                .map(p -> new SimpleGrantedAuthority(p.name()))
-                .toList();
+        List<SimpleGrantedAuthority> permissionAuthorities = permissions.stream()
+                .map(p -> new SimpleGrantedAuthority(p.getPermission()))
+                .collect(Collectors.toList());
+
+        permissionAuthorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return permissionAuthorities;
     }
 }
